--- a/css/styles.css
+++ b/css/styles.css
@@ -1,171 +1,164 @@
-body{
-    font-family: 'Montserrat', sans-serif;
+body {
+  font-family: "Montserrat", sans-serif;
 }
-h1{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
-    line-height: 1.5;
-    font-weight: 900;
+h1,h2,h3 {
+  font-weight: 900;
+  line-height: 1.5;
 }
-.container-fluid{
-    padding: 3% 15% 7%;
+.container-fluid {
+  padding: 3% 15% 7%;
 }
-h2{
-    font-weight: 900;
-    line-height: 1.5;
-    font-size: 2.5rem;
+h2 {
+  font-size: 3rem; 
 }
-h3{
-    font-weight: 900;
-    line-height: 1.5;
-}
+
 /* TITLE */
 
-#title{
-    background-color: #ff4c68;
-    color: white;
+#title {
+  background-color: #ff4c68;
+  color: white;
+}
+.title-heading {
+  font-size: 3rem;
 }
 
+.navbar {
+  padding: 8px 0 0 0;
+}
+.navbar-brand {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 500;
+  letter-spacing: -0.0625rem;
+}
+.nav-item {
+  padding: 0 18px;
+}
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat", sans-serif;
+}
 
-.navbar{
-    padding: 8px 0 0 0;
+.title-row {
+  padding-top: 4.5rem;
 }
-.navbar-brand{
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 2.5rem; 
-    font-weight: 500;
-    letter-spacing: -0.0625rem;
+.download-button {
+  margin: 5% 3% 5% 0;
 }
-.nav-item{
-    padding: 0 18px;
-}
-.nav-link{
-    font-size: 1.2rem;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.title-row{
-    padding-top: 4.5rem; 
-}
-.download-button{
-    margin: 5% 3% 5% 0;
-}
-.iphone-img{
-    width: 60%;
-    transform: rotate(25deg);
-    position: absolute;
-    right: 29%;
+.iphone-img {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 29%;
 }
 
 /* FEATURE  */
-#features{
-    padding: 12% 15% 5%;
-    background-color: white;
-    position: relative;
+#features {
+  padding: 12% 15% 5%;
+  background-color: white;
+  position: relative;
 }
-.col-ft{
-    text-align: center;
-    padding-bottom: 72px;
+.col-ft {
+  text-align: center;
+  padding-bottom: 72px;
 }
-.ft-head{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 1.5rem;
-    padding-top: 15px;
+.ft-head {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 1.5rem;
+  padding-top: 15px;
 }
-.ft-text{
-    color: #8f8f8f;
-    width: 75%;
-    margin: 0 auto;
+.ft-text {
+  color: #8f8f8f;
+  width: 75%;
+  margin: 0 auto;
 }
-.ft-icon{
-    color: #ef8172;
+.ft-icon {
+  color: #ef8172;
 }
-.ft-icon:hover{
-    color: #ff4c68;
+.ft-icon:hover {
+  color: #ff4c68;
 }
 
 /* Testimonial section */
 
-#testimonials{
-   
-    text-align: center;
-    background-color:#ef8172;
+#testimonials {
+  text-align: center;
+  background-color: #ef8172;
 }
-.carousel-inner{
-    padding: 7% 15%;
+.carousel-inner {
+  padding: 7% 15%;
 }
-.testimonial-text{
-    font-weight: 900;
-    line-height: 1.5;
-    font-size: 2rem;
-    color: white;
+.testimonial-text {
+  font-weight: 900;
+  line-height: 1.5;
+  font-size: 2rem;
+  color: white;
 }
-.testimonial-img{
-    width: 10%;
-    border-radius: 100%;
-    margin: 20px;
+.testimonial-img {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
 
 /* Press section */
-#press{
-    background-color:#ef8172;
-    text-align: center;
-    padding-bottom: 3%;
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
 }
-.press-img{
-    width: 15%;
-    margin: 20px 50px 20px;
+.press-img {
+  width: 15%;
+  margin: 20px 50px 20px;
 }
 
 /* Pricing Section */
 
-#pricing{
-    padding: 100px;
-    text-align: center;
+#pricing {
+  padding: 100px;
+  text-align: center;
 }
-.price-col{
-    padding: 3% 2%;
+.price-col {
+  padding: 3% 2%;
 }
 
 /* CTA SECTION */
 
-#cta{
-    background-color:#ff4c68;
-    padding: 6% 15%;
-    text-align: center;
+#cta {
+  background-color: #ff4c68;
+  padding: 6% 15%;
+  text-align: center;
 }
-.cta-text{
-    font-size: 3.5rem;
-    color: white;
-    width: 95%;
-    margin: 0 auto;
+.cta-text {
+  font-size: 3.5rem;
+  color: white;
+  width: 95%;
+  margin: 0 auto;
 }
 
 /* FOOTER  */
 
- #footer{
-    background-color: white;
-    padding: 7% 15%;
+#footer {
+  background-color: white;
+  padding: 7% 15%;
+  text-align: center;
+}
+.footer-icon {
+  margin: 1%;
+}
+.footer-text {
+  padding: 2%;
+}
+
+@media (max-width: 1070px) {
+  #title {
     text-align: center;
-} 
-.footer-icon{
-    margin:1%;
-}
-.footer-text{
-    padding: 2%;
-}
-
-
-@media (max-width: 1070px){
-    #title{
-        text-align: center;
-    }
-    .iphone-img{
-        position: static;
-        transform: rotate(0);
-    }
-    .cta-text{
-        width: 90%;
-    }
+  }
+  .iphone-img {
+    position: static;
+    transform: rotate(0);
+  }
+  .cta-text {
+    width: 90%;
+  }
 }
